manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
